# thepythongeek-site

./: .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
client/app/project/: views.py
client/app/static/css/: main.css
client/app/templates/: base.html  home.html  project2.html  project3.html  project4.html  project5.html  resume.html
