[project]
name = "pygeek-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.78",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-restx>=1.3.2",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "psycopg2-binary>=2.9.11",
    "pytz>=2026.1.post1",
    "redis>=7.4.0",
    "s3fs>=0.4.2",
]
